# Facultate

tema2/: CMakeLists.txt  run_and_compile.sh
tema2/src/: Main.cpp  Main2.cpp
